[tool.poetry]
name = "meucrew"
version = "0.1.0"
description = ""
authors = ["Bruna Balzer <brunabalzer@alunos.utfpr.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
